# buscapet

./: .gitignore  docker-compose.yml  pyproject.toml
app/core/: urls.py
app/core/settings/: base.py  dev.py
app/core/templates/core/: base.html
app/core/templates/core/components/: navbar.html
app/pets/: admin.py  forms.py  models.py  urls.py  views.py
app/pets/migrations/: 0001_initial.py  0002_lostpet_city_lostpet_description_lostpet_location_and_more.py  0003_delete_lastseen.py  0004_remove_lostpet_location_lostpet_address_and_more.py
app/pets/templates/pets/: pet_create.html
app/pets/templates/pets/partials/: form.html
app/static/core/js/: alpine.js
app/tailwind/static/tailwind/: style.css
app/tailwind/static_src/: package-lock.json  package.json
app/tailwind/static_src/src/: input.css
app/users/: managers.py  models.py
app/users/migrations/: 0001_initial.py
