[project]
name = "buscapet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.7",
    "django-htmx>=1.23.0",
    "django-widget-tweaks>=1.5.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-browser-reload>=1.18.0",
    "django-debug-toolbar>=5.0.1",
    "isort>=6.0.1",
]
